# shv

./: .gitignore  Makefile.am  README.md  a.sh  boot.S  configure.ac  debug-uart.c  debug-vga.c  debug.c  gdt.c  grub.cfg  hpt.c  hpto.c  hptw.c  idt-asm.S  idt.c  kernel.c  lhv-asm.S  lhv-ept.c  lhv-global.c  lhv-guest.c  lhv-keyboard.c  lhv-mouse.c  lhv-timer.c  lhv-user.c  lhv-vmcs.c  lhv-vmx.c  lhv.c  libc_stdio.c  libc_string.c  linker.ld  paging.c  shv-asm.S  shv-console.c  shv-ept.c  shv-global.c  shv-guest-asm.S  shv-guest.c  shv-keyboard.c  shv-mouse.c  (+8 more)
.circleci/: config.yml
.github/workflows/: build.yml  indent.yml
.github/workflows_deactived/: indent.yml
circleci/: config.yml
include/: _acpi.h  _msr.h  _multiboot.h  _paging.h  _processor.h  _vmx.h  _vmx_ctls.h  _vmx_ctls_fields.h  _vmx_vmcs_fields.h  asm_helper.h  bitfield.h  cpu.h  euchk.h  hpt.h  hpt_consts.h  hpt_internal.h  hptw.h  lhv.h  shv-opts.h  shv-pic.h  shv.h  shv_types.h  smp.h  trustvisor.h  xmhf.h
src/: boot.S  cmdline.c  debug-uart.c  debug-vga.c  debug.c  hpto.c  idt-asm.S  idt.c  kernel.c  libc_string.c  shv-asm.S  shv-console.c  shv-ept.c  shv-global.c  shv-guest-asm.S  shv-guest.c  shv-keyboard.c  shv-mouse.c  shv-nmi.c  shv-pic.c  shv-timer.c  shv-user-asm.S  shv-user.c  shv-vmcs.c  shv-vmx-asm.S  shv-vmx.c  shv.c  smp-asm.S  smp.c  spinlock.c  strtoul.c
tools/: build.sh  indent.sh  qemu.sh
tools/ci/: Jenkinsfile  Jenkinsfile_nmi  Jenkinsfile_xmhf  build.sh  check_indent.sh  jenkins.groovy  qemu.sh  test5.py  test6.py
tools/vmcs/: read_macro.py
